# RINet

./: .gitignore  README.md  pyproject.toml  setup.sh
data/liver/: download_liver_dataset.r  prepare_test_data_individual_outlier_removal.ipynb  prepare_test_data_no_outlier_removal.ipynb  prepare_test_data_panel_outlier_removal.ipynb
data/simulated/scripts/: create_simulated_data_1d.ipynb  create_simulated_data_1d_quality_check.ipynb  create_simulated_data_2d.ipynb  plot_examples.ipynb
evaluation/benchmarking/: evaluate.ipynb  helpers.py  plot_predictions.ipynb  run_all_models.ipynb
evaluation/common/: helpers.py
evaluation/liver_bivariate_analysis/: confidence_intervals.ipynb  evaluate.ipynb  helpers.py  plot.ipynb  stage_vs_abnormality.ipynb
evaluation/path_comp_effects/: performance_trends.ipynb
evaluation/synthetic_data_quality/: synthetic_data_quality.ipynb
figures/: framework_inference.ipynb  framework_training.ipynb
modeling/v1/: train.ipynb
modeling/v2/: train_1d_tuning.ipynb  train_2d_tuning.ipynb
src/rinet/: data_sim.py  metrics.py  models.py  utils.py
src/rinet.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
